--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-  {% if is_edit %} Редактировать пост {% else %} Новый пост {% endif %} 
+  {% if is_edit %} Редактирование поста {% else %} Новый пост {% endif %} 
 {% endblock %}
 {% block content%}
   {% load user_filters %}
@@ -8,10 +8,24 @@
     <div class="col-md-8 p-5">
       <div class="card">
         <div class="card-header">    
-          {% if is_edit %} Редактировать пост {% else %} Новый пост {% endif %}            
+          {% if is_edit %} Редактирование поста {% else %} Новый пост {% endif %}            
         </div>
-        <div class="card-body">        
-          <form method="post" enctype="multipart/form-data" action="{% if is_edit %} {% url 'posts:post_edit' form.instance.id %} {% else %} {% url 'posts:post_create' %} {% endif %}">
+        <div class="card-body"> 
+          {% if form.errors %}
+            {% for field in form %}
+              {% for error in field.errors %}            
+                <div class="alert alert-danger">
+                  {{ error|escape }}
+                </div>
+              {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+              <div class="alert alert-danger">
+                {{ error|escape }}
+              </div>
+            {% endfor %}
+          {% endif %}       
+          <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% for field in form %}
               <div class="form-group row my-3 p-3">
