--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -9,21 +9,8 @@
      {{ group.description | linebreaks }}
   </p>
   {% for post in page_obj %}
-    <ul>
-      <li>
-        <a href="{% url 'posts:profile' post.author.username %}">@{{ post.author.username }}</a> 
-      </li>
-      <li>
-        Дата публикации: {{ post.pub_date }}
-      </li>
-    </ul>
-    {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-      <img class="card-img my-2" src="{{ im.url }}">
-    {% endthumbnail %}     
-    <p>
-      {{ post.text | linebreaks }}
-    </p>
-    {% if not forloop.last %}<hr>{% endif %}
+    {% include 'posts/includes/post.html' with group_list=True %}
+      {% if not forloop.last %}<hr>{% endif %}
   {% endfor %} 
   {% include 'posts/includes/paginator.html' %}
 {% endblock %}
