--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -3,29 +3,11 @@
   Последние обновления на сайте
 {% endblock %}
 {% load thumbnail %}
-{% block content %}
+{% block content %} 
   <h1>Последние обновления на сайте</h1>
+  {% include 'posts/includes/switcher.html' with index=True %}
   {% for post in page_obj %}
-    <ul>
-      <li>
-        <a href="{% url 'posts:profile' post.author.username %}">@{{ post.author.username }}</a>
-      </li>
-      <li>
-        Дата публикации: {{ post.pub_date }}
-      </li>
-    </ul>
-    {% load thumbnail %}
-    {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-      <img class="card-img my-2" src="{{ im.url }}">
-    {% endthumbnail %}      
-    <p>
-      {{ post.text | linebreaks }}
-    </p>
-    {% if post.group.slug %}
-      <p>
-        <a href="{% url 'posts:group_list' post.group.slug %}">#{{ post.group.title }}</a>
-      </p>
-    {% endif %}
+    {% include 'posts/includes/post.html' %}
     {% if not forloop.last %}<hr>{% endif %}
   {% endfor %}
   {% include 'posts/includes/paginator.html' %}
