--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -5,58 +5,7 @@
 {% load thumbnail %}
 {% block content%}
   <div class="row">
-    <aside class="col-12 col-md-3">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">
-          Дата публикации: {{ post.pub_date }} 
-        </li>
-        {% if post.group.slug %} 
-          <li class="list-group-item">
-            <a href="{% url 'posts:group_list' post.group.slug %}">#{{ post.group.title }}</a>
-          </li>
-        {% endif %}
-        <li class="list-group-item">
-          <a href="{% url 'posts:profile' post.author.username %}">@{{ post.author.username }}</a>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Всего постов автора:  <span >{{ post.author.posts.count }}</span>
-        </li>
-      </ul>
-    </aside>
-    <article class="col-12 col-md-9">
-      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-        <img class="card-img my-2" src="{{ im.url }}">
-      {% endthumbnail %}
-      <p> {{ post.text | linebreaks }} </p>
-    </article>
+    {% include 'posts/includes/post.html' with post_detail=True %}
   </div>
-  {% load user_filters %}
-  {% if user.is_authenticated %}
-    <div class="card my-4">
-      <h5 class="card-header">Добавить комментарий:</h5>
-      <div class="card-body">
-        <form method="post" action="{% url 'posts:add_comment' post.id %}">
-          {% csrf_token %}      
-          <div class="form-group mb-2">
-            {{ form.text|addclass:"form-control" }}
-          </div>
-          <button type="submit" class="btn btn-primary">Отправить</button>
-        </form>
-      </div>
-    </div>
-  {% endif %}
-  {% for comment in comments %}
-    <div class="media mb-4">
-      <div class="media-body">
-        <h5 class="mt-0">
-          <a href="{% url 'posts:profile' comment.author.username %}">
-            @{{ comment.author.username }}
-          </a>
-        </h5>
-          <p>
-          {{ comment.text }}
-          </p>
-        </div>
-      </div>
-  {% endfor %}
+  {% include 'posts/includes/comments.html' %}
 {% endblock %}
