--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,32 +1,33 @@
 {% extends 'base.html' %}
 {% block title %}
-  Профайл пользователя {{ author.get_full_name }}
+  Профайл пользователя {{ author.username }}
 {% endblock %}
-{% load thumbnail %}
 {% block content %}
-  <h1>Все посты пользователя {{ author.get_full_name }}</h1>
-  <h3>Всего постов: {{ author.posts.count }} </h3>
+  <div class="mb-5">
+    <h1>Все посты пользователя {{ author.username }}</h1>
+    <h3>Всего постов: {{ author.posts.count }}</h3>
+    <h3>Подписки: {{author.follower.count}}</h3>
+    <h3>Подписчики: {{author.following.count}}</h3>
+    {% if user.is_authenticated and user != author %}
+      {% if following %}
+        <a
+          class="btn btn-lg btn-light"
+          href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+        >
+          Отписаться
+        </a>
+      {% else %}
+          <a
+            class="btn btn-lg btn-primary"
+            href="{% url 'posts:profile_follow' author.username %}" role="button"
+          >
+            Подписаться
+          </a>
+      {% endif %}
+    {% endif %}
+  </div>
   {% for post in page_obj %}   
-    <article>
-      <ul>
-        <li>
-          <a href="{% url 'posts:profile' post.author.username %}">@{{ post.author.username }}</a>
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date }} 
-        </li>
-      </ul>
-      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-        <img class="card-img my-2" src="{{ im.url }}">
-      {% endthumbnail %}
-      <p> {{ post.text | linebreaks }} </p>
-      <a href="{% url 'posts:post_detail' post.id %}">подробная информация </a>
-    </article>
-    {% if post.group.slug %}
-      <p>
-        <a href="{% url 'posts:group_list' post.group.slug %}">#{{ post.group.title }}</a> 
-      </p>
-    {% endif %}   
+    {% include 'posts/includes/post.html' with profile=True %}
     {% if not forloop.last %}<hr>{% endif %}
   {% endfor %}  
   {% include 'posts/includes/paginator.html' %} 
